# django-celery-postgres-acoes-b3

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
stocks/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
stocks/migrations/: 0001_initial.py
