[tool.poetry]
name = "acoes-b3"
version = "0.1.0"
description = ""
authors = ["andreluoliveira82 <andreluoliveira@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
pytz = "^2024.2"
sqlalchemy = "^2.0.36"
django-celery-results = "^2.5.1"
gevent = "^24.10.3"
djangorestframework = "^3.15.2"
django-jazzmin = "^3.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
